[gd_scene load_steps=4 format=3 uid="uid://kfriwiujuk1b"]

[ext_resource type="Script" path="res://scene/battle_scene/fish_stats_ui.gd" id="1_h83nh"]
[ext_resource type="PackedScene" uid="uid://ci6jrxlhscep" path="res://scene/battle_scene/skill_container.tscn" id="1_qnxyy"]
[ext_resource type="PackedScene" uid="uid://cyybcjd1msgce" path="res://scene/battle_scene/buff_container.tscn" id="2_8vrq7"]

[node name="FishStatsUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_h83nh")

[node name="MainPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(228, 128)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="SideBar" type="PanelContainer" parent="MainPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/HBoxContainer/SideBar"]
layout_mode = 2

[node name="Buff" type="Button" parent="MainPanel/HBoxContainer/SideBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "buff"

[node name="Skill" type="Button" parent="MainPanel/HBoxContainer/SideBar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "技能"

[node name="BuffContainer" parent="MainPanel/HBoxContainer" instance=ExtResource("2_8vrq7")]
layout_mode = 2

[node name="SkillContainer" parent="MainPanel/HBoxContainer" instance=ExtResource("1_qnxyy")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MainPanel/HBoxContainer/SideBar/VBoxContainer/Buff" to="." method="_on_buff_pressed"]
[connection signal="pressed" from="MainPanel/HBoxContainer/SideBar/VBoxContainer/Skill" to="." method="_on_skill_pressed"]
